--- a/package.json
+++ b/package.json
@@ -15,23 +15,22 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "eslint-config-prettier": "8.5.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "jest": "^29.2.1",
     "jest-expo": "^48.0.2",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "eslint-config-prettier": "8.5.0"
-
+    "react-native": "0.71.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
     "@testing-library/jest-native": "5.2.0",
     "@testing-library/react-native": "11.4.0",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
-    "typescript": "^4.9.4",
+    "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
     "eslint": "^8.26.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "^27.1.3",
@@ -39,10 +38,11 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
+    "lefthook": "^1.2.2",
     "prettier": "2.7.1",
     "react-native-testing-library": "6.0.0",
     "react-test-renderer": "18.0.0",
-    "lefthook": "^1.2.2"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
