--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "dependencies": {
     "eslint-config-prettier": "8.5.0",
     "expo": "~48.0.18",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "jest": "^29.2.1",
     "jest-expo": "^48.0.2",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-svg": "13.4.0",
+    "twrnc": "^3.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +34,7 @@
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.72.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "eslint": "^8.26.0",
     "eslint-plugin-import": "2.26.0",
@@ -42,6 +47,7 @@
     "prettier": "2.7.1",
     "react-native-testing-library": "6.0.0",
     "react-test-renderer": "18.0.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
   "private": true
