--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
       "@assets/*": ["assets/*"],
       "@components": ["src/components/index.ts"],
       "@hooks": ["src/hooks/index.ts"],
-      "@screens": ["src/screens/index.ts"]
+      "@screens": ["src/screens/index.ts"],
+      "@core": ["src/core/index.ts"],
+      "@svgIcons": ["src/svgIcons/index.ts"]
     },
     "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
