--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native": "0.71.8",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
-    "twrnc": "^3.6.1"
+    "twrnc": "^3.6.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
