--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest-expo": "^48.0.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
     "twrnc": "^3.6.1",
@@ -36,6 +37,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.2",
+    "@types/react-native-indicators": "^0.16.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "eslint": "^8.26.0",
     "eslint-plugin-import": "2.26.0",
