--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "lefthook": "^1.2.2",
     "prettier": "2.7.1",
     "react-native-testing-library": "6.0.0",
