--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@testing-library/jest-native": "5.2.0",
+    "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "11.4.0",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
